--- a/app/src/main/res/layout/content_main_screen.xml
+++ b/app/src/main/res/layout/content_main_screen.xml
@@ -4,6 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:context=".Main_Screen.MainScreenActivity"
+    tools:showIn="@layout/activity_main_screen">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
