--- a/app/src/main/res/layout/profile_list.xml
+++ b/app/src/main/res/layout/profile_list.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -11,26 +11,45 @@
         android:layout_margin="10dp"
         app:cardBackgroundColor="#a8dfc0"
         app:cardCornerRadius="10dp">
-        <LinearLayout
+
+        <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:orientation="vertical">
+            android:layout_margin="10dp">
 
             <TextView
                 android:id="@+id/profile_name"
-                android:text="Profile"
-                android:textColor="#753db1"
-                android:textSize="40dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:text="Profile"
+                android:textColor="#753db1"
+                android:textSize="40dp" />
+
+            <Button
+                android:id="@+id/button2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="false"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="24dp"
+                android:layout_toRightOf="@id/profile_name"
+                android:text="QR code" />
+
+            <TextView
+                android:id="@+id/textV"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/profile_name"
                 android:text="triggers"
                 android:textColor="#753db1"
-                android:textSize="20dp"/>
-        </LinearLayout>
+                android:textSize="20dp" />
+        </RelativeLayout>
+
+
+
+
     </androidx.cardview.widget.CardView>
+
 
 </RelativeLayout>
