--- a/app/src/main/res/layout/activity_create_profile.xml
+++ b/app/src/main/res/layout/activity_create_profile.xml
@@ -1,15 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
     tools:context=".Create_Profile.CreateProfileActivity">
 
-    <TextView
+    <Switch
+        android:id="@+id/Bluetooth"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Create Profile"/>
+        android:layout_marginTop="80dp"
+        android:layout_marginLeft="60dp"
+        android:switchPadding="100dp"
+        android:textSize="30sp"
+        android:text="Bluetooth" />
 
+    <Switch
+        android:id="@+id/airplane_mode"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="150dp"
+        android:layout_marginLeft="60dp"
+        android:switchPadding="110dp"
+        android:textSize="30sp"
+        android:text="Airplane \n Mode" />
 </RelativeLayout>
