--- a/app/src/main/res/layout/list_style.xml
+++ b/app/src/main/res/layout/list_style.xml
@@ -5,8 +5,30 @@
     android:orientation="vertical">
 
     <TableRow android:layout_height="98dp">
+
+        <CheckBox
+            android:id="@+id/checkBox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
         <TextView
             android:id="@+id/wifiname"
+            android:layout_width="370dp"
+            android:layout_height="73dp"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_weight="1"
+            android:background="#fff"
+            android:padding="10dp"
+            android:text="here"
+            android:textColor="#000"
+            android:textSize="14dp" />
+
+        <TextView
+            android:id="@+id/bssid"
+            android:visibility="gone"
             android:layout_width="370dp"
             android:layout_height="73dp"
             android:layout_marginBottom="10dp"
