--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#0E153F</color>
     <color name="colorAccent">#C72A09</color>
     <color name="black">#000</color>
+    <color name="text_white">#F8F6F6</color>
 </resources>
