--- a/app/src/main/res/layout/activity_main_screen.xml
+++ b/app/src/main/res/layout/activity_main_screen.xml
@@ -42,4 +42,13 @@
         android:src="@drawable/ic_vol_type_speaker_light"
         app:backgroundTint="#E91E63" />
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/alarm"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|center"
+        android:layout_margin="@dimen/fab_margin"
+        android:src="@drawable/alarm"
+        app:backgroundTint="#E91E63" />
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
