[fix] null pointer exception in Create profile activity

--- a/app/src/main/res/layout/activity_main_screen.xml
+++ b/app/src/main/res/layout/activity_main_screen.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/homeBackground"
+    android:background="@drawable/gradient3"
     tools:context=".Main_Screen.MainScreenActivity">
 
     <com.google.android.material.appbar.AppBarLayout
